welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:2: error: illegal start of simple expression
	if ((Math.abs(a-b))>=10 || (Math.abs(b-c))>=10 || (Math.abs(c-a))>=10)))
                                                                              ^